--- a/product.html
+++ b/product.html
@@ -163,6 +163,8 @@
 
         </main>
 
+        <!-- We are use modal -->
+
         <!-- Card Section -->
         <section class="mt-3">
             <div class="container">
@@ -177,7 +179,53 @@
                                     videography
                                     Agriculture (crop monitoring, spraying</p>
                             </div>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary"
+                                data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Launch demo modal
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal"
+                                tabindex="-1"
+                                aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-fullscreen">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title"
+                                                id="exampleModalLabel">Fighter</h5>
+                                            <button type="button"
+                                                class="btn-close"
+                                                data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <img src="Images/card1.jpg" alt="" class="img-fluid">
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus debitis nihil temporibus dolor quam. Laboriosam porro architecto eos fugit consequatur, recusandae ea. Quibusdam voluptatibus nisi consequatur consequuntur vel facere repudiandae libero recusandae odit. Iure ea, totam dignissimos quia quam iusto quos. Sunt non incidunt maiores nisi. Minima quasi esse doloremque unde odit quae, eos quibusdam. Ullam expedita maiores sequi laborum culpa quasi minus quia autem explicabo deserunt rem quae, consectetur velit iure blanditiis recusandae eligendi debitis consequuntur. Eaque voluptatem tempora aspernatur vero voluptatibus suscipit odit quis hic fugiat. Et, aspernatur culpa voluptas nobis libero modi sint deleniti mollitia cum repellat.</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button"
+                                                class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                            <button type="button"
+                                                class="btn btn-primary">Save
+                                                changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
 
                     <div class="col-md-3">
