--- a/home.html
+++ b/home.html
@@ -41,6 +41,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="services.html">Services</a>
                         </li>
+                        <li class="nav-item">
+                                <a class="nav-link hov"
+                                    href="contact.html">Contact</a>
+                            </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#"
                                 id="navbarDropdownMenuLink" role="button"
